--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
                   <repository>
                            <id>deploymentRepo</id>
                            <name>Nexus Repository</name>
-                           <url>http://http://192.168.1.59:8081/repository/maven-snapshots/</url>
+                           <url>http://192.168.1.59:8081/repository/maven-snapshots/</url>
                   </repository>
          </distributionManagement>
 </project>
