--- a/pom.xml
+++ b/pom.xml
@@ -73,4 +73,12 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>deploymentRepo</id>
+            <name>Nexus Repository</name>
+            <url>http://192.168.1.40:8081/repository/maven-snapshots/</url>
+        </repository>
+    </distributionManagement>
+
 </project>
