--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -28,11 +29,12 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.0</version> <!-- Vérifiez si cette version est toujours la plus récente -->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
+            <scope>provided</scope> <!-- Changement du scope -->
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
@@ -50,7 +52,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -68,10 +69,10 @@
         </plugins>
     </build>
     <distributionManagement>
-             <repository>
-                  <id>deploymentRepo</id>
-                  <name>Nexus Repository</name>
-                  <url>http://192.168.1.58:8081/repository/maven-snapshots/</url>
-             </repository>
+        <repository>
+            <id>deploymentRepo</id>
+            <name>Nexus Repository</name>
+            <url>http://192.168.1.58:8081/repository/maven-snapshots/</url>
+        </repository>
     </distributionManagement>
 </project>
