--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-#Server configuration
-server.servlet.context-path=/tpFoyer17
-server.port=8082
 
-### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/tpFoyer17?&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+# DB Configuration :
+spring.datasource.url=jdbc:mysql://localhost:3306/tpfoyerdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-
-### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+
+
+# Web Server (Tomcat) configuration :
+server.port=8089
+server.servlet.context-path=/tpfoyer
+
 
