--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
         <repository>
             <id>deploymentRepo</id>
             <name>Nexus Repository</name>
-            <url>http://192.168.1.6:8081/repository/maven-releases/</url>
+            <url>http://192.168.1.102/:8081/repository/maven-releases/</url>
         </repository>
     </distributionManagement>
 
