--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/>
     </parent>
     <groupId>tn.esprit</groupId>
-    <artifactId>tp-foyer</artifactId>
+    <artifactId>tpfoyer17</artifactId>
     <version>5.0.0</version>
-    <name>tp-foyer</name>
+    <name>tpfoyer17</name>
     <description>tp-foyer</description>
     <properties>
         <java.version>17</java.version>
@@ -62,13 +62,7 @@
 
     </dependencies>
 
-    <distributionManagement>
-        <repository>
-            <id>deploymentRepo</id>
-            <name>Nexus Repository</name>
-            <url>http://192.168.33.10:8081/repository/maven-snapshots/</url>
-        </repository>
-    </distributionManagement>
+
 
     <build>
         <plugins>
@@ -105,5 +99,12 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>deploymentRepo</id>
+            <name>Nexus Repository</name>
+            <url>http://192.168.33.10:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
 
 </project>
