--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/>
     </parent>
     <groupId>tn.esprit</groupId>
-    <artifactId>tpfoyer17</artifactId>
-    <version>5.0.0</version>
-    <name>tpfoyer17</name>
+    <artifactId>tp-foyer</artifactId>
+    <version>5.0.0-SNAPSHOT</version>
+    <name>tp-foyer</name>
     <description>tp-foyer</description>
     <properties>
         <java.version>17</java.version>
@@ -103,7 +103,7 @@
         <repository>
             <id>deploymentRepo</id>
             <name>Nexus Repository</name>
-            <url>http://192.168.33.10:8081/repository/maven-releases/</url>
+            <url>http://192.168.33.10:8081/repository/maven-snapshots/</url>
         </repository>
     </distributionManagement>
 
