--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <!-- Project Coordinates -->
     <groupId>tn.esprit</groupId>
     <artifactId>tp-foyer</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>tp-foyer</name>
     <description>tp-foyer</description>
 
