--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Web Server (Tomcat) configuration :
 server.port=8089
-server.servlet.context-path=/tpFoyer17
+server.servlet.context-path=/tpfoyer17
 
 
