--- a/dockercompose.yml
+++ b/dockercompose.yml
@@ -14,7 +14,7 @@ services:
       - db:/var/lib/mysql
 
   spring-boot-app:
-    image: hamza/tpfoyerdevops:latest # Utilisation de la variable d'environnement IMAGE_TAG  ${IMAGE_TAG}
+    image: hamzaesprit/tpfoyerdevops:latest # Utilisation de la variable d'environnement IMAGE_TAG  ${IMAGE_TAG}
     container_name: app-back
     ports:
       - "8089:8089"
